Fix widget parameter overflow on config admin menu

--- a/src/main/webapp/app/shared/components/list/list.component.scss
+++ b/src/main/webapp/app/shared/components/list/list.component.scss
@@ -58,6 +58,7 @@
   }
 
   .list-detail {
+    max-width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,8 +86,7 @@
     h2 {
       font-size: 0.9em;
       max-width: 100%;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      overflow-wrap: break-word;
     }
 
     h3 {
@@ -97,6 +97,8 @@
 
 .list-buttons {
   display: flex;
+  justify-content: flex-end;
+  flex: 1 1 20%;
   gap: 8px;
   padding: 0 20px;
 }
